[package]
name = "gfabase"
version = "0.1.0"
authors = ["Mike Lin <dna@mlin.net>"]
edition = "2018"

[dependencies]
genomicsqlite = "0.5.1"
clap = "3.0.0-beta.2"
json = "^0"
log = "^0.4"
fern = { version = "^0.5", features = ["colored"] }
regex = "^1.1"
anyhow = "^1.0"
thiserror = "^1.0"
tempfile = "3"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]
